# VBridgeDemo

./: .gitignore  README.md  SHERPA_PIPELINES_HANDOFF.md  gradle.properties  settings.gradle.kts
app/: UI.md  build.gradle.kts  fetch_models.ps1
app/doc/: BEGINNER_GUIDE.md  VBRIDGE_FEATURES.md  VBRIDGE_FEATURES_FOLLOWUP.md
app/src/androidTest/java/com/example/demovbridge/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/asr-en/: decoder.onnx  joiner.onnx
app/src/main/assets/tts-en/: tokens.txt
app/src/main/cpp/: CMakeLists.txt  jni.c
app/src/main/java/com/example/demovbridge/: MainActivity.kt
app/src/main/java/com/example/demovbridge/asr/: SherpaAsr.kt  WhisperAsr.kt
app/src/main/java/com/example/demovbridge/audio/: AudioCapture.kt  AudioPlayback.kt  AudioRingBuffer.kt  BluetoothAudioManager.kt
app/src/main/java/com/example/demovbridge/benchmark/: LatencyTracer.kt
app/src/main/java/com/example/demovbridge/data/: SettingsManager.kt
app/src/main/java/com/example/demovbridge/net/: LanFallbackClient.kt
app/src/main/java/com/example/demovbridge/network/: ConnectivityMonitor.kt  DelegatingTranslationTransport.kt  NetworkEvents.kt  VBridgeSocket.kt
app/src/main/java/com/example/demovbridge/pipeline/: AudioModels.kt  DirectionState.kt  InterpreterPipeline.kt  MeetingViewModel.kt  NoOpTransport.kt  PipelineDiagnostics.kt  PipelineEvent.kt  PipelineInterfaces.kt
app/src/main/java/com/example/demovbridge/translation/: DelegatingTranslator.kt  FallbackTranslator.kt  Glossary.kt  LanServerTranslator.kt  MlKitTranslator.kt  PhoMtOnnxTranslator.kt  PhoMtTranslator.kt  ServerTranslator.kt  Translator.kt
app/src/main/java/com/example/demovbridge/tts/: AndroidTts.kt  AndroidTtsSynthesizer.kt  SherpaTts.kt
app/src/main/java/com/example/demovbridge/ui/components/: TopChatBar.kt  (+5 more)
app/src/main/java/com/example/demovbridge/utils/: LruEventCache.kt  ResourceUtils.kt
app/src/main/java/com/example/demovbridge/vad/: SherpaVad.kt  VoiceActivityDetector.kt
app/src/main/java/com/whispercpp/whisper/: LibWhisper.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/demovbridge/: ExampleUnitTest.kt
app/src/test/java/com/example/demovbridge/pipeline/: InterpreterPipelineTest.kt
app/src/test/java/com/example/demovbridge/translation/: DelegatingTranslatorTest.kt  LanServerTranslatorTest.kt
doc/: bluetooth.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+13 files in other folders)
